--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -29,6 +29,10 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Microphone access required</string>
+    <string>This app needs microphone access to record audio</string>
+    <key>com.apple.security.device.microphone</key>
+    <true/>
+    <key>com.apple.developer.siri</key>
+    	<true/>
 </dict>
 </plist>
